tree-sitter-nova/test/corpus/lambda.txt
================================================================================
Lambda expression
================================================================================

|x| x * 2

--------------------------------------------------------------------------------

(source_file (lambda body: (multiplicative_expr left: (identifier) operator: "*" right: (integer_literal))))

================================================================================
Typed lambda
================================================================================

|x: Int| -> Int { x * 2 }

--------------------------------------------------------------------------------

(source_file (lambda body: (block_expr (multiplicative_expr left: (identifier) operator: "*" right: (integer_literal)))))
